[tool.poetry]
name = "balanced-dex-monitor"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]

[tool.poetry.scripts]
balanced-dex-monitor = "balanced_dex_monitor:main"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
