[tool.poetry]
name = "balanced-dex-monitor"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.1"
requests = "^2.25.1"
iconsdk = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
